welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:7: error: reassignment to val
		nbPas = nbPas - 1
                      ^Program:10: error: reassignment to val
		if (nbPas=0)
                         ^